--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                 <!--  -->
                 <div class="brands">
                     <!-- 1st brand -->
-                    <div class="brand-name">
+                    <div class="brand-name1">
                         <a href="https://www.starbucks.in/dashboard">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnN35pK7GYCVlKF92S4KQ6i9CGuHMcvqZgsA&usqp=CAU"
                                 alt=""></a>
                     </div>
-                    <div class="brand-desc">
+                    <div class="brand-desc1">
                         <h4>Starbucks</h4>
                         <br>
                         <p>Starbucks clearly is one of the leading, most prominent and popular coffee chain in the
@@ -199,7 +199,7 @@
 
                 <!-- 2 -->
                 <div class="brands">
-                    <div class="brand-name">
+                    <div class="brand-name2">
                         <h4>Mc'Cafe</h4>
                         <br>
                         <p>McCafé is an independent coffee and food chain owned by Mcdonald's, and it has become a
@@ -207,7 +207,7 @@
                             leading chain in many countries. McCafe is popular for bringing much variety in flavours and
                             offers options with reasonable prices too.</p>
                     </div>
-                    <div class="brand-desc">
+                    <div class="brand-desc2">
                         <a href="https://www.mcdonaldsindia.com/mccafe.html">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyZ1ibMTqTAFyMcwfMPas0Z4vPGl9PxwPlBg&usqp=CAU"
                                 alt=""></a>
@@ -216,12 +216,12 @@
 
                 <!-- 3rd -->
                 <div class="brands">
-                    <div class="brand-name">
+                    <div class="brand-name1">
                         <a href="https://www.nescafe.com/in/">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVykk9QO6701Q6DHcSiAGoso7bB6GsC6Yr-Q&usqp=CAU"
                                 alt=""></a>
                     </div>
-                    <div class="brand-desc">
+                    <div class="brand-desc1">
                         <h4>Nescafe</h4>
                         <br>
                         <p>Nescafe is a brand of Nestle, which has a wide presence across the globe. From the east to
@@ -232,7 +232,7 @@
 
                 <!-- 4th -->
                 <div class="brands">
-                    <div class="brand-name">
+                    <div class="brand-name2">
                         <h4>Peet's Coffee</h4>
                         <br>
                         <p>The store layout of Pete's coffee is much more traditional, and it even inspired the founders
@@ -242,7 +242,7 @@
                             and various roast options.</p>
 
                     </div>
-                    <div class="brand-desc">
+                    <div class="brand-desc2">
                         <a href="https://www.peets.com/">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYwoq3Xbo_KuxEQ2tpKpIrbEESkeoiGThSAA&usqp=CAU"
                                 alt="">
@@ -252,12 +252,12 @@
 
                 <!-- 5th -->
                 <div class="brands">
-                    <div class="brand-name">
+                    <div class="brand-name1">
                         <a href="https://www.costacoffee.in/">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoRGpChsGldSKYo0XaDqKmXcOcrwm4nlFguQ&usqp=CAU"
                                 alt=""></a>
                     </div>
-                    <div class="brand-desc">
+                    <div class="brand-desc1">
                         <h4>Costa Coffee</h4>
                         <br>
                         <p>Costa Coffee is one of Britain's biggest coffee chains and one of the highest-selling coffee
